# sateri

./: README.md  requirements.txt
backend/: pyproject.toml
backend/config/: settings.py
frontend/: .bunfig.toml  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/ui/: LanguageSwitcher.tsx
frontend/src/contexts/: LanguageContext.tsx
frontend/src/i18n/: i18n.ts
frontend/src/layout/: Footer.tsx  Header.tsx  Layout.tsx
frontend/src/pages/: home.tsx
