[project]
name = "backend"
version = "0.1.0"
description = "Backend for KråkSjö Säteri"
requires-python = ">=3.12"

dependencies = [
  "Django>=5.2,<6.0",
]

[project.optional-dependencies]
dev = [
  "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py312"
select = [
  "A", "B", "C", "E", "F", "I", "N", "Q", "S", "T", "UP", "W", "YTT",
]
ignore = [
  "E501",
]
extend-exclude = ["venv", "frontend", "migrations"]

[tool.ruff.lint.isort]
known-first-party = ["config", "apps"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
